Fixed the confusion of the contact box looking like a sign-in form. It now goes to the bottom on mobile

--- a/styles/custom.css
+++ b/styles/custom.css
@@ -201,11 +201,18 @@ p {
     padding: 10px;
     background: #ffffff11;
     margin-top: 10px;
-    height: inherit;
 }
 
 .search-box {
     height: 150px;
+}
+
+.contact-section{
+    width: 350px;
+    height: -webkit-fill-available;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
 }
 
 textarea:focus, .data-btns:focus, .data-files:hover {
@@ -338,14 +345,6 @@ footer {
         background-color: #181818;
         background-image: url("https://www.transparenttextures.com/patterns/argyle.png");        
     }
-    /* .data-container{
-        display: flex;
-        flex-wrap: wrap;
-        flex-direction: inherit;
-        justify-content: space-evenly;
-        align-items: stretch;
-        padding: 50px 40px;
-    } */
     .data-selection{
         margin: 20px 0;
         order: 1;
@@ -359,6 +358,11 @@ footer {
     .data-output{
         margin: 20px 0;
         order: 3;
+        height: auto;
+    }
+    .contact-section{
+        margin: 20px 0;
+        order: 4;
         height: auto;
     }
     footer{
@@ -378,13 +382,18 @@ footer {
         height: auto;
     }
     .data-directory {
-        margin: 50px 0;
+        margin: 20px 0;
         order: 2;
         height: auto;
     }
     .data-output{
         margin: 20px 0;
         order: 3;
+        height: auto;
+    }
+    .contact-section{
+        margin: 20px 0;
+        order: 4;
         height: auto;
     }
     footer {
